docs: add registerUserHandler docs
