# handler/response.go
@@ -48,6 +48,12 @@ type deleteUserResponse struct {
 }
 
 type getAllUsersResponse struct {
+	Users []userResponse
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode"`
 }
 
 func sendError(ctx *gin.Context, code int, msg string) {
